@@ -1,3 +1,5 @@
+""" Browser view controllers
+"""
 from Products.Five.browser import BrowserView
 
 class ViewForm(BrowserView):
