@@ -1,9 +1,6 @@
-try:
-    from zope.annotation.interfaces import IAnnotations
-except ImportError:
-    #BBB Plone 2.5
-    from zope.app.annotation.interfaces import IAnnotations
-
+""" Heritor low level API
+"""
+from zope.annotation.interfaces import IAnnotations
 from zope.interface import implements
 from eea.faceted.inheritance.config import ANNO_ANCESTOR
 from eea.faceted.inheritance.criteria.interfaces import IHeritorAccessor
@@ -16,12 +13,20 @@ class HeritorAccessor(object):
     def __init__(self, context):
         self.context = context
 
-    def fget(self, default=None):
-        anno = IAnnotations(self.context)
-        return anno.get(ANNO_ANCESTOR, '')
+    def ancestor(self=None):
+        """ Ancestor property
+        """
+        def fget(self, default=None):
+            """ Getter
+            """
+            anno = IAnnotations(self.context)
+            return anno.get(ANNO_ANCESTOR, '')
 
-    def fset(self, value):
-        anno = IAnnotations(self.context)
-        anno[ANNO_ANCESTOR] = value
+        def fset(self, value):
+            """ Setter
+            """
+            anno = IAnnotations(self.context)
+            anno[ANNO_ANCESTOR] = value
 
-    ancestor = property(fget, fset)
+        return property(fget, fset)
+    ancestor = ancestor()
