@@ -1,7 +1,11 @@
+""" Faceted Inheritance XML Adapters
+"""
 from Products.GenericSetup.utils import XMLAdapterBase
 from eea.faceted.inheritance.interfaces import IFacetedHeritor
 
 class FacetedHeritorXMLAdapter(XMLAdapterBase):
+    """ GenericSetup XML adapter for Faceted Heritor
+    """
     __used_for__ = IFacetedHeritor
 
     def _exportNode(self):
