@@ -1,7 +1,16 @@
+""" Faceted inheritance public interfaces
+"""
 # Subtypes
-from eea.faceted.inheritance.subtypes.interfaces import IPossibleFacetedHeritor #pylint: disable-msg = W0611
-from eea.faceted.inheritance.subtypes.interfaces import IFacetedHeritor #pylint: disable-msg = W0611
+from eea.faceted.inheritance.subtypes.interfaces import IPossibleFacetedHeritor
+from eea.faceted.inheritance.subtypes.interfaces import IFacetedHeritor
 
 # Criteria
-from eea.faceted.inheritance.criteria.interfaces import IHeritorAccessor #pylint: disable-msg = W0611
-from eea.faceted.inheritance.criteria.interfaces import ICriteria #pylint: disable-msg = W0611
+from eea.faceted.inheritance.criteria.interfaces import IHeritorAccessor
+from eea.faceted.inheritance.criteria.interfaces import ICriteria
+
+__all__ = [
+    IPossibleFacetedHeritor.__name__,
+    IFacetedHeritor.__name__,
+    IHeritorAccessor.__name__,
+    ICriteria.__name__,
+]
