@@ -1,14 +1,9 @@
 """ Subtyping support
 """
 from zope.interface import implements
-from zope.interface import alsoProvides, noLongerProvides
+from zope.interface import alsoProvides
 from zope.event import notify
-from zope.publisher.interfaces import NotFound
-
-from p4a.subtyper.engine import SubtypeAddedEvent, SubtypeRemovedEvent
-from Products.statusmessages.interfaces import IStatusMessage
-from Products.Five.browser import BrowserView
-from Products.CMFCore.utils import getToolByName
+from p4a.subtyper.engine import SubtypeAddedEvent
 
 from eea.faceted.inheritance.subtypes.interfaces import IFacetedHeritorSubtyper
 from eea.facetednavigation.subtypes.subtyper import FacetedPublicSubtyper
